@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacButton.c,v 1.16 2002/06/17 10:54:29 drh Exp $
+ * RCS: @(#) $Id: tkMacButton.c,v 1.17 2002/08/28 01:08:06 drh Exp $
  */
 
 #include "tkButton.h"
@@ -227,8 +227,11 @@ TkpDisplayButton(
 
     if ((butPtr->type >= TYPE_CHECK_BUTTON) && !butPtr->indicatorOn) { 
 	if (!TkMacHaveAppearance() || !hasImageOrBitmap) {
-	    relief = (butPtr->flags & SELECTED) ? TK_RELIEF_SUNKEN
-		: butPtr->offRelief;
+	    if (butPtr->flags & SELECTED) {
+		relief = TK_RELIEF_SUNKEN;
+	    } else if (butPtr->overRelief != relief) {
+		relief = butPtr->offRelief;
+	    }
 	}
     }
 
